validation-flow/validation-flow-output/validation-flow-5611,-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "370"
  name: validation-flow-5611,-route
  namespace: validation-flow-migration
spec:
  to:
    kind: Service
    name: validation-flow-service
    weight: 100
  port:
    targetPort: validation-flow-5611,
