validation-flow/validation-flow-output/validation-flow-7016-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "371"
  name: validation-flow-7016-route
  namespace: validation-flow
spec:
  to:
    kind: Service
    name: validation-flow-service
    weight: 100
  port:
    targetPort: validation-flow-7016
  tls:
    termination: passthrough
  wildcardPolicy: None
