validation-flow/validation-flow-output/validation-flow-http-8001-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "371"
  name: validation-flow-http-8001-route
  namespace: validation-flow
spec:
  to:
    kind: Service
    name: validation-flow-service
    weight: 100
  port:
    targetPort: validation-flow-http-8001
  # tls:
  #  termination: passthrough
  # wildcardPolicy: None
