validation-flow/validation-flow-output/validation-flow-https-9090-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "370"
  name: validation-flow-https-9090-route
  namespace: validation-flow
spec:
  to:
    kind: Service
    name: validation-flow-service
    weight: 100
  port:
    targetPort: validation-flow-https-9090
  # tls:
  #  termination: passthrough
  # wildcardPolicy: None
